package com.example.android.scorekeeper;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;
import android.support.test.espresso.ViewInteraction;
import android.support.test.filters.LargeTest;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;
import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;


import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;
import static android.support.test.InstrumentationRegistry.getInstrumentation;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withClassName;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class TestingDayAndNight {

     @Rule
     public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void DayNightTesting() {

        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());
        ViewInteraction txt_md1 = onView(allOf(withId(R.id.title), withText("Night Mode"), childAtPosition(childAtPosition(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class), 0), 0), isDisplayed()));
        txt_md1.check(matches(withText("Night Mode")));
        ViewInteraction md1 = onView(allOf(withId(R.id.title), withText("Night Mode"), childAtPosition(childAtPosition(withClassName(is("android.support.v7.view.menu.ListMenuItemView")), 0), 0), isDisplayed()));
        md1.perform(click());
        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());

        ViewInteraction txt_md2 = onView(allOf(withId(R.id.title), withText("Day Mode"), childAtPosition(childAtPosition(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class), 0), 0), isDisplayed()));
        txt_md2.check(matches(withText("Day Mode")));
        ViewInteraction md2 = onView(allOf(withId(R.id.title), withText("Day Mode"), childAtPosition(childAtPosition(withClassName(is("android.support.v7.view.menu.ListMenuItemView")), 0), 0), isDisplayed()));
        md2.perform(click());
        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());

        ViewInteraction txt_md3 = onView(allOf(withId(R.id.title), withText("Night Mode"), childAtPosition(childAtPosition(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class), 0), 0), isDisplayed()));
        txt_md3.check(matches(withText("Night Mode")));
        //ViewInteraction md3 = onView(allOf(withId(R.id.title), withText("Night Mode"), childAtPosition(childAtPosition(withClassName(is("android.support.v7.view.menu.ListMenuItemView")), 0), 0), isDisplayed()));
        //md3.perform(click());
        //openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());

    }

    private static Matcher<View> childAtPosition(final Matcher<View> parentMatcher, final int position) {
        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent) && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
